# numa-aware-sched-nanox

./: Makefile.am  README.md  configure.ac
src/: .ycm_extra_conf.py  common.am
src/plugins/: Makefile.am  instrumentation.am  sched.am
src/plugins/instrumentation/: execution_map.cpp
src/plugins/sched/: dep-method.hpp  dep_sched.cpp  dependency_sched.cpp  dfifo_sched.cpp  locality-common.hpp  metapart_sched.cpp  precalculated-mp_sched.cpp  precalculated_sched.cpp  rip-method.hpp  rip_sched.cpp
